2000-03-09  Federico Mena Quintero  <federico@helixcode.com>

	* gui/Makefile.am: Removed the corba-cal stuff.  Commented out the
	Pilot conduit stuff for now.

	* gui/calendar.c: Random #ifdefs to make it build, although this
	file is going away.

	* gui/Makefile.am: Removed referenes to calobj.[ch] and timeutil.[ch].

	* gui/calendar-conduit.c: Fixup includes.

	* gui/calendar-conduit.h: Fixup includes.

2000-03-09  Seth Alves  <alves@hungry.com>

	* gui/gnome-cal.h: replaced "Calendar *cal" with "CalClient *calc"
	in the GnomeCalendar struct.

	* gui/*.c: tracked change from Calendar * to CalClient
	
	* gui/main.c: moved alarm_defaults from here to cal-util/calobj.c
	(calendar_get_events_in_range): pulled this out of calendar.c and
	fixed it up to use cal-client stuff.  i'm not sure where to put it yet.

	* gui/main.c (calendar_iterate): pulled this one out of calendar.c also
	
2000-03-07  Federico Mena Quintero  <federico@helixcode.com>

	* cal-client/Makefile.am: Removed cal-client-alarm.[ch] from the
	list of sources.  This was a miscommunication on our part.

2000-03-05  Seth Alves  <alves@hungry.com>

	* cal-client/cal-client-alarm.c: stubs for client side
	access to alarm structures.  this will probably change,
	since i don't know what i'm doing.

	* cal-util/alarm-enums.h: enums for alarms needed by
	both the client and the server

	* remaining source files in calendar/... have been moved
	to calendar/gui.

	* gui/alarm.c: start to decouple the view from the model
	in the alarm editing code

2000-03-03  Seth Alves  <alves@hungry.com>

	* cal-util/Makefile.am: new file -- things shared between
	the client and server go in this directory

	*  calobj.c calobj.h icalendar.c icalendar.h
	timeutil.c timeutil.h cal-util.c cal-util.h where moved
	backend stuff went into pcs.  shared stuff went into
	cal-util.

2000-03-02  Federico Mena Quintero  <federico@helixcode.com>

	At this point the calendar client and personal calendar server